[package]
name = "persistent_json"
version = "0.1.0"
authors = ["Julian Kenwood <nomad010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librrb = { git = "https://github.com/nomad010/librrb" }
serde_json = "*"